--- a/FMS/MainWindow.xaml
+++ b/FMS/MainWindow.xaml
@@ -1,15 +1,15 @@
-﻿<mah:MetroWindow
+﻿<Window
     x:Class="FMS.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:FMS"
-    xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local1="clr-namespace:FMS.ViewModels.Main"
-    Width="1080"
-    Height="1920"
+    xmlns:local1="clr-namespace:FMS.ViewModels.Main"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Width="1920"
+    Height="1080"
     WindowStyle="None"
     mc:Ignorable="d">
-    
+
     <Grid />
-</mah:MetroWindow>
+</Window>
