--- a/FMS/MainWindow.xaml
+++ b/FMS/MainWindow.xaml
@@ -2,14 +2,251 @@
     x:Class="FMS.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:conv="clr-namespace:FleetManagementSystem.ViewModels.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:FMS"
     xmlns:local1="clr-namespace:FMS.ViewModels.Main"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mdcontrols="clr-namespace:MaterialDesignExtensions.Controllers;assembly=MaterialDesignExtension"
+    xmlns:mdthemes="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     Width="1920"
     Height="1080"
     WindowStyle="None"
     mc:Ignorable="d">
+    <Window.Resources>
+        <conv:BoolToVIsibilityConverter x:Key="BoolToVisibility" />
+    </Window.Resources>
+    <Border Background="Black" SnapsToDevicePixels="True">
+        <Grid>
+            <!--#region Main Grid Layout-->
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition />
+                <RowDefinition Height="auto" />
+            </Grid.RowDefinitions>
+            <!--#endregion-->
+            <!--#region Background image-->
+            <Border Grid.RowSpan="3" />
 
-    <Grid />
+            <!--#endregion-->
+            <!--#region Top area-->
+            <Border
+                Height="50"
+                VerticalAlignment="Top"
+                CornerRadius="10 10 0 0">
+                <Grid>
+                    <!--#region Top panel definition-->
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto" />
+                        <ColumnDefinition Width="auto" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="auto" />
+                        <ColumnDefinition Width="50" />
+                        <ColumnDefinition Width="50" />
+                    </Grid.ColumnDefinitions>
+                    <!--#endregion-->
+                    <!--#region Program title-->
+                    <TextBlock
+                        Grid.Column="2"
+                        Margin="0,0,0,0"
+                        HorizontalAlignment="Center"
+                        FontSize="24"
+                        FontWeight="ExtraBold"
+                        Foreground="White"
+                        Text="Fleet Management System" />
+                    <!--#region LoggedUser-->
+                    <TextBlock
+                        Grid.Column="3"
+                        Width="auto"
+                        Margin="0,0,30,0"
+                        Text="Tu bedzie aktywny uzytkownik" />
+                    <!--#endregion-->
+                    <!--#region Menu toggle button with animation-->
+                    <ToggleButton
+                        x:Name="ShowPagesMenuButton"
+                        Grid.Row="1"
+                        Width="40"
+                        Background="Black"
+                        IsChecked="{Binding ShowMenu, Mode=TwoWay}"
+                        Style="{StaticResource MainMenuButtonStyle}">
+                        <ToggleButton.Triggers>
+                            <EventTrigger RoutedEvent="ToggleButton.Checked">
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="MenuContainer" Storyboard.TargetProperty="(UIElement.Visibility)">
+                                            <DiscreteObjectKeyFrame KeyTime="0:0:0.0" Value="{x:Static Visibility.Visible}" />
+                                        </ObjectAnimationUsingKeyFrames>
+                                        <DoubleAnimation
+                                            Storyboard.TargetName="MenuContainer"
+                                            Storyboard.TargetProperty="Opacity"
+                                            From="1"
+                                            To="1"
+                                            Duration="0:0:0.3">
+                                            <DoubleAnimation.EasingFunction>
+                                                <SineEase EasingMode="EaseInOut" />
+                                            </DoubleAnimation.EasingFunction>
+                                        </DoubleAnimation>
+                                        <DoubleAnimation
+                                            Storyboard.TargetName="MenuPanel"
+                                            Storyboard.TargetProperty="Width"
+                                            From="80"
+                                            To="300"
+                                            Duration="0:0:0.8">
+                                            <DoubleAnimation.EasingFunction>
+                                                <SineEase EasingMode="EaseInOut" />
+                                            </DoubleAnimation.EasingFunction>
+                                        </DoubleAnimation>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </EventTrigger>
+                            <EventTrigger RoutedEvent="ToggleButton.Unchecked">
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="MenuContainer" Storyboard.TargetProperty="(UIElement.Visibility)">
+                                            <DiscreteObjectKeyFrame KeyTime="0:0:0.8" Value="{x:Static Visibility.Visible}" />
+                                        </ObjectAnimationUsingKeyFrames>
+                                        <DoubleAnimation
+                                            Storyboard.TargetName="MenuContainer"
+                                            Storyboard.TargetProperty="Opacity"
+                                            From="1"
+                                            To="1"
+                                            Duration="0:0:1.3">
+                                            <DoubleAnimation.EasingFunction>
+                                                <SineEase EasingMode="EaseInOut" />
+                                            </DoubleAnimation.EasingFunction>
+                                        </DoubleAnimation>
+                                        <DoubleAnimation
+                                            Storyboard.TargetName="MenuPanel"
+                                            Storyboard.TargetProperty="Width"
+                                            From="300"
+                                            To="80"
+                                            Duration="0:0:0.8">
+                                            <DoubleAnimation.EasingFunction>
+                                                <SineEase EasingMode="EaseInOut" />
+                                            </DoubleAnimation.EasingFunction>
+                                        </DoubleAnimation>
+
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </EventTrigger>
+                        </ToggleButton.Triggers>
+                    </ToggleButton>
+                    <!--#endregion-->
+                    <Image
+                        Grid.Column="1"
+                        Margin="10,0,0,0"
+                        HorizontalAlignment="Left"
+                        Source="Models/Resources/Images/Logo.png" />
+                    <!--#region Buttons on top-->
+                    <StackPanel Grid.Column="5" VerticalAlignment="Top">
+                        <Button
+                            x:Name="CloseAppButton"
+                            Width="40"
+                            Height="40"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Top"
+                            Command="{Binding ShutdownAppButtonClick}">
+                            <Button.Style>
+                                <Style TargetType="Button">
+                                    <!--  Ustal podstawowe tło przycisku (opcjonalnie)  -->
+                                    <Setter Property="Background" Value="Transparent" />
+                                    <!--  Zmień tło przycisku na czerwone, gdy myszka jest nad nim  -->
+                                    <Style.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter Property="Background" Value="Red" />
+                                        </Trigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Button.Style>
+                            <Image
+                                Width="40"
+                                Height="40"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                Source="Models/Resources/Icons/CloseAppWhite.png" />
+                        </Button>
+                    </StackPanel>
+                    <!--#endregion-->
+                </Grid>
+            </Border>
+            <!--#endregion-->
+            <Frame
+                x:Name="PageContainer"
+                Grid.Row="1"
+                Content="{Binding CurrentPage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                NavigationUIVisibility="Hidden" />
+            <!--#region Side menu region-->
+            <Border
+                x:Name="MenuContainer"
+                Grid.Row="1"
+                Grid.RowSpan="2"
+                Background="#59000000"
+                Opacity="0">
+                <StackPanel
+                    x:Name="MenuPanel"
+                    Width="80"
+                    HorizontalAlignment="Left">
+                    <TextBlock
+                        Height="50"
+                        Margin="0"
+                        Padding="15,10"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Center"
+                        Background="White"
+                        FontSize="18"
+                        FontWeight="Bold"
+                        Opacity="1"
+                        Text="Menu"
+                        TextAlignment="Center" />
+                    <Separator Height="0.4" Margin="0,-5,0,0" />
+                    <!--  TU DODAĆ PRZYCISKI DO STRON  -->
+                    <StackPanel>
+                        <ui:Button
+                            x:Name="LoginButton"
+                            Width="300"
+                            Padding="15,10"
+                            HorizontalContentAlignment="Left"
+                            Background="Transparent"
+                            BorderBrush="Transparent"
+                            Command="{Binding LoginPageButtonClick}"
+                            MouseOverBackground="DarkCyan">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="auto" />
+                                    <ColumnDefinition />
+                                </Grid.ColumnDefinitions>
+                                <Image
+                                    Width="40"
+                                    Height="40"
+                                    Margin="0,0,10,0"
+                                    Source="{Binding LoginPageIcon}" />
+                                <TextBlock
+                                    Grid.Column="1"
+                                    Margin="15,0,0,0"
+                                    VerticalAlignment="Center"
+                                    FontSize="18"
+                                    FontWeight="Bold"
+                                    Foreground="White"
+                                    Text="Strona użytkownika" />
+                            </Grid>
+                        </ui:Button>
+                        <Separator Height="0.4" Margin="0,-5,0,0" />
+                        <!--  Tu DODAJ PRZYCISKI  -->
+                    </StackPanel>
+                    <StackPanel Visibility="{Binding UserIsSuperadmin, Converter={StaticResource BoolToVisibility}}">
+                        <TextBlock Text="Tu dalej dodaj" />
+                    </StackPanel>
+                    <StackPanel Visibility="{Binding UserIsSuperadmin, Converter={StaticResource BoolToVisibility}}">
+                        <TextBlock Text="Tu tez dodaj" />
+                    </StackPanel>
+
+                    <!--  TU DODAĆ PRZYCISKI DO STRON  -->
+
+                </StackPanel>
+
+            </Border>
+            <!--#endregion-->
+        </Grid>
+    </Border>
 </Window>
