--- a/FMS/Views/Main/LoginPage.xaml
+++ b/FMS/Views/Main/LoginPage.xaml
@@ -8,8 +8,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     Title="LoginPage"
-    Width="1920"
-    Height="1030"
+    Width="auto"
+    Height="900"
     mc:Ignorable="d">
     <Page.Resources>
         <conv:BoolToVIsibilityConverter x:Key="BoolToVisibilityConverter" />
@@ -20,5 +20,89 @@
         <conv:BoolToYellowGreenConverter x:Key="BoolToYellowGreen" />
     </Page.Resources>
 
-    <Grid Background="White" />
+    <Grid>
+        <StackPanel>
+            <StackPanel
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Orientation="Horizontal">
+                <StackPanel
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Orientation="Vertical">
+                    <Label
+                        Content="Nazwa użytkownika"
+                        FontSize="18"
+                        Foreground="White" />
+                    <Separator Height="10" />
+                    <Label
+                        Content="Hasło"
+                        FontSize="18"
+                        Foreground="White" />
+                </StackPanel>
+                <Separator Width="15" />
+                <StackPanel
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Orientation="Vertical">
+                    <TextBox MinWidth="300" Text="{Binding Username}" />
+                    <Separator Height="10" />
+                    <TextBox MinWidth="300" Text="{Binding Password}" />
+                </StackPanel>
+
+            </StackPanel>
+            <Separator Height="20" />
+            <Grid x:Name="ButtonGrid">
+                <Grid x:Name="LoginGrid" Visibility="{Binding LoginVisible, Converter={StaticResource BoolToVisibilityConverter}}">
+                    <ui:Button
+                        Height="45"
+                        MinWidth="100"
+                        HorizontalAlignment="Center"
+                        Background="White"
+                        Command="{Binding LoginButtonClick}"
+                        CommandParameter="true">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto" />
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+
+                            <Image Grid.Column="0" Source="Models/Resources/Icons/LoginButtonBlack.png" />
+                            <Label
+                                Grid.Column="1"
+                                Content="Zaloguj"
+                                FontSize="18"
+                                Foreground="Black" />
+
+
+                        </Grid>
+                    </ui:Button>
+                </Grid>
+                <Grid x:Name="LogoutGrid" Visibility="{Binding LogoutVisible, Converter={StaticResource BoolToVisibilityConverter}}">
+                    <ui:Button
+                        Height="45"
+                        MinWidth="100"
+                        HorizontalAlignment="Center"
+                        Background="White"
+                        Command="{Binding LogoutButtonClick}"
+                        CommandParameter="true">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto" />
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+                            <Image Grid.Column="0" Source="Models/Resources/Icons/LogoutButtonBlack.png" />
+                            <Label
+                                Grid.Column="1"
+                                Content="Wyloguj"
+                                FontSize="18"
+                                Foreground="Black" />
+
+
+                        </Grid>
+                    </ui:Button>
+                </Grid>
+            </Grid>
+        </StackPanel>
+    </Grid>
 </Page>
