--- a/FMS/MainWindow.xaml
+++ b/FMS/MainWindow.xaml
@@ -2,7 +2,7 @@
     x:Class="FMS.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:conv="clr-namespace:FleetManagementSystem.ViewModels.Converters"
+    xmlns:conv="clr-namespace:FMS.ViewModels.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:FMS"
     xmlns:local1="clr-namespace:FMS.ViewModels.Main"
