--- a/FMS/Views/Main/ForkliftManagementPage.xaml
+++ b/FMS/Views/Main/ForkliftManagementPage.xaml
@@ -2,20 +2,24 @@
     x:Class="FMS.Views.Main.ForkliftManagementPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:conv="clr-namespace:FMS.ViewModels.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:FMS.Views.Main"
+    xmlns:main="clr-namespace:FMS.ViewModels.Main"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     Title="ForkliftManagementPage"
     Width="auto"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
+    d:DataContext="{d:DesignInstance Type=main:ForkliftManagementPageViewModel}"
     mc:Ignorable="d">
-
+    <Page.Resources>
+        <conv:BoolToVIsibilityConverter x:Key="BoolToVisibility" />
+    </Page.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto" />
             <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="auto" />
         </Grid.ColumnDefinitions>
         <!--#region  Saved forklifts list-->
         <Grid Grid.Column="0">
@@ -28,7 +32,7 @@
                     FontSize="22"
                     FontWeight="ExtraBold"
                     Style="{StaticResource TitleStyle}"
-                    Text="Zapisane wózki"
+                    Text="Zapisane wózki:"
                     TextAlignment="Left" />
                 <Separator Height="5" />
                 <ItemsControl Height="1000" ItemsSource="{Binding SavedForklifts}">
@@ -54,7 +58,7 @@
         <Grid Grid.Column="1" HorizontalAlignment="Center">
             <StackPanel VerticalAlignment="Center">
                 <StackPanel Orientation="Horizontal">
-                    <StackPanel Height="300" Margin="0,20,0,0">
+                    <StackPanel Height="300" Margin="100,20,0,0">
                         <TextBlock
                             Margin="0"
                             Padding="15,10"
@@ -129,7 +133,7 @@
                             TextAlignment="Center" />
                     </StackPanel>
                 </StackPanel>
-                <StackPanel Margin="-80,0,0,0" Orientation="Horizontal">
+                <StackPanel Margin="50,0,0,0" Orientation="Horizontal">
                     <ui:Button
                         Width="180"
                         Height="40"
@@ -211,6 +215,31 @@
 
                 </StackPanel>
             </StackPanel>
+        </Grid>
+        <!--#endregion-->
+        <!--#region Online status-->
+        <Grid Grid.Column="2" Margin="0,0,50,0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+            </Grid.RowDefinitions>
+            <TextBlock
+                Grid.Row="0"
+                Grid.Column="2"
+                MinWidth="100"
+                Margin="5,100,0,0"
+                FontSize="20"
+                FontWeight="Bold"
+                Foreground="White"
+                Text="Status połaczenia:"
+                TextWrapping="Wrap" />
+            <Image
+                x:Name="OnlineIcon"
+                Grid.Row="1"
+                Margin="0,20,0,0"
+                Source="{Binding ConnectionStatusIconPath}" />
+
         </Grid>
         <!--#endregion-->
     </Grid>
