--- a/FMS/Views/Main/LoginPage.xaml
+++ b/FMS/Views/Main/LoginPage.xaml
@@ -2,7 +2,7 @@
     x:Class="FMS.Views.Main.LoginPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:conv="clr-namespace:FleetManagementSystem.ViewModels.Converters"
+    xmlns:conv="clr-namespace:FMS.ViewModels.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:FMS.Views.Main"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
